multi-platform video export added
